wp-content/themes/betheme-child/style.css
/*
Theme Name: Betheme Child
Theme URI: https://themes.muffingroup.com/betheme
Author: Muffin group
Author URI: https://muffingroup.com
Description: Child Theme for Betheme
Template: betheme
Version: 2.0.1
*/

.mfn-main-slider.mfn-rev-slider {
  background: #002d6d;
}

.logo-wrapper > img {
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
}

.title {
  font-weight: 600;
}

.protondb-wrapper .mcb-column-inner {
  margin-bottom: 0px;
}

.apps-fade::after {
  background: radial-gradient(#262626 30%, rgba(0,0,0,0) 100%);
  top: 0;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  position: absolute;
}

.mfn-header-sticky-section {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
  box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
}

#mfn-header-template .button_label {
  white-space: nowrap !important;
}

.trailer_box .desc .subtitle, .trailer_box.plain .desc .line {
  background-color: rgba(0,0,0,0.4);
  backdrop-filter: blur(10px);
  background-image: none;
  font-weight: 600;
}

.trailer_box .title {
  color: #fff;
  font-size: 15px !important;
}

.trailer_box .desc > .line {
  display: none !important;
  visibility: hidden !important;
}

.trailer_box:hover .desc .subtitle {
  bottom: inherit;
  font-size: 18px!important;
}

select:focus {
  color: #fff;
  background-color: #464646 !important;
}

.iso-selection {
  margin-bottom: 30px;
  float: left;
  width: 100%;
}

.code {
  padding: 5px;
  background: #000;
  border-radius: 5px;
  font-family: 'Fira Code';
  font-size: 10px;
  line-height: 14px;
  user-select: all;
  cursor: pointer;
}

.command-header {
  width: 100%;
  float: left;
  margin-bottom: 5px;
}

.command {
  background: #000;
  border-radius: 5px;
  padding: 10px;
  font-size: 10px;
  line-height:25px;
  font-family: 'Fira Code';
  user-select: all;
  cursor: pointer;
}

.code:hover,
.command:hover {
  background-color: #444;
}

#image-builder-result {
  transition: opacity 0.45s ease-in-out, transform 0.65s ease-in-out, max-height 0.35s ease-in-out;
}

#image-builder > div {
  transition: opacity 0.20s ease-in-out, transform 0.35s ease-in-out, max-height 0.15s ease-in-out;
}

.mfn-header-tmpl-menu-sidebar {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
  box-shadow: -3px 0px 8px rgba(0,0,0,0.25);
}

.mfn-header-menu .mfn-menu-li > .mfn-menu-link {
  color: #fff;
}

.mfn-close-icon .icon {
  color: #fff !important;
}

.mfn-header-menu .mfn-menu-li:hover > .mfn-menu-link {
  color: #fff;
}

.hidden-fade {
  opacity: 0;
  overflow: hidden;
  transform: scale(0.75);
  max-height: 0px;
}

.shown-fade {
  opacity: 1;
  visibility: visible;
  transform: scale(1.0);
  max-height: 100%;
}

#apps {
  background-repeat: no-repeat;
  background-position: center;
}

#image-picker {
  padding-bottom: 0px;
}

rs-layer-wrap {
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
}

.tp-rs-img {
  filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.25));
}

#mfn-header-template .button {
  box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
}

#diy {
  padding-bottom: 25px;
}

.gradients-container {
  top: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  filter: brightness(60%) blur(45px)!important;
}

@keyframes moveInCircle {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes moveVertical {
  0% {
    transform: translateY(-50%);
  }
  50% {
    transform: translateY(50%);
  }
  100% {
    transform: translateY(-50%);
  }
}

@keyframes moveHorizontal {
  0% {
    transform: translateX(-50%) translateY(-10%);
  }
  50% {
    transform: translateX(50%) translateY(10%);
  }
  100% {
    transform: translateX(-50%) translateY(-10%);
  }
}

#image-builder-result a {
  color: #ccc;
}

#image-builder-result a:hover {
  color: #fff;
  text-decoration: underline;
}

#desktop a {
  color: #999;
}

#desktop a:hover {
  color: #000;
}

#slider-1-slide-1-layer-6,
.button-custom .button {
  font-family: "DM Sans"!important;
}

#hardware .tablet-two-third.column {
  width: 100% !important;
}

#image-builder select {
  min-width: 300px;
}

.gamemode label::after {
  content: '(This will automatically login to game mode)';
  width: 100%;
  display: inline-block;
  font-weight: 300;
  font-size: 16px;
  font-style: italic;
} 

#features {
  background-position: center;
}

.gradient-bg {
  width: 100vw;
  height: 100vh;
  position: relative;
  overflow: hidden;
  background: linear-gradient(40deg, rgb(138, 42, 226), rgb(0, 71, 171));
  top: 0;
  left: 0;
  pointer-events:none;
}

.gradient-bg svg {
  display: none;
}

.gradient-bg .gradients-container {
  width: 100%;
  height: 100%;
}

.gradient-bg .g1 {
  position: absolute;
  background: radial-gradient(circle at center, rgba(18, 113, 255, 0.8) 0, rgba(18, 113, 255, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: 90%;
  height: 90%;
  top: calc(50% - 90% / 2);
  left: calc(50% - 90% / 2);

  transform-origin: center center;
  animation: moveVertical 30s ease infinite;

  opacity: 1;
}

.gradient-bg .g2 {
  position: absolute;
  background: radial-gradient(circle at center, rgba(221, 74, 255, 0.8) 0, rgba(221, 74, 255, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: 90%;
  height: 90%;
  top: calc(50% - 90% / 2);
  left: calc(50% - 90% / 2);

  transform-origin: calc(50% - 400px);
  animation: moveInCircle 20s reverse infinite;

  opacity: 1;
}

.gradient-bg .g3 {
  position: absolute;
  background: radial-gradient(circle at center, rgba(100, 220, 255, 0.8) 0, rgba(100, 220, 255, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: 90%;
  height: 90%;
  top: calc(50% - 90% / 2 + 200px);
  left: calc(50% - 90% / 2 - 500px);

  transform-origin: calc(50% + 400px);
  animation: moveInCircle 40s linear infinite;

  opacity: 1;
}

.gradient-bg .g4 {
  position: absolute;
  background: radial-gradient(circle at center, rgba(200, 50, 50, 0.8) 0, rgba(200, 50, 50, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: 80%;
  height: 80%;
  top: calc(50% - 90% / 2);
  left: calc(50% - 90% / 2);

  transform-origin: calc(50% - 200px);
  animation: moveHorizontal 40s ease infinite;

  opacity: 0.7;
}

.gradient-bg .g5 {
  position: absolute;
  background: radial-gradient(circle at center, rgba(180, 180, 50, 0.8) 0, rgba(180, 180, 50, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: calc(90% * 2);
  height: calc(90% * 2);
  top: calc(50% - 90%);
  left: calc(50% - 90%);

  transform-origin: calc(50% - 800px) calc(50% + 200px);
  animation: moveInCircle 20s ease infinite;

  opacity: 1;
}

.gradient-bg .interactive {
  position: absolute;
  background: radial-gradient(circle at center, rgba(140, 100, 255, 0.8) 0, rgba(140, 100, 255, 0) 50%) no-repeat;
  mix-blend-mode: soft-light;

  width: 100%;
  height: 100%;
  top: -50%;
  left: -50%;

  opacity: 0.7;
}

@media only screen and (min-width: 768px) and (max-width: 1440px) {
  .mcb-item-7hplt2hve {
    width: 66.666% !important;
    left: 0;
    right: 0;
    margin: auto;
  }
}

@media only screen and (min-width: 481px) and (max-width: 1440px) {
  #mfn-header-template .button {
    font-size: 10px !important;
    margin-left: 15px !important;
    position: absolute;
    right: 45px;
    top: -20px;
  }

  #apps {
    background-size: contain;
  }
}

@media only screen and (min-width: 481px) {
  #slider-1-slide-1-layer-0 {
    white-space:nowrap!important;
    width:100%!important;
    top:-10px;
  }
}

@media only screen and (min-width: 1441px) {
  #apps {
    background-position: top;
  }

  .mcb-item-7hplt2hve {
    width: 60% !important;
    left: 0;
    right: 0;
    margin: auto;
  }
}

@media only screen and (max-width: 1440px) {
  .apps-fade::after {
    background: radial-gradient(#262626 40%, rgba(0,0,0,0) 100%);
  }
}

@media only screen and (max-width: 959px) {
  #mfn-header-template .hide-mobile {
    display: block !important;
  }

  #mfn-header-template .button {
    background: none;
    position: absolute;
    right: 45px;
    top: -20px;
  }

  #mfn-header-template .button > .button_label {
    display: none;
    visibility: hidden;
  }

  #mfn-header-template .button > .button_icon {
    font-size: 20px;
    top: -2px;
    position: relative;
  }

  #menu-main-menu,
  #menu-main-menu-2 {
    display: none !important;
  }

  .mcb-section .mcb-wrap .mcb-item-o12qouxct {
    flex: 0 0 200px;
    max-width: 200px;
  }

  #diy .mcb-item-button-inner,
  #diy .desc {
    text-align: center!important;
  }

  #diy .mcb-item-button-inner {
    margin-left: 0px;
  }

  #apps .column_button {
    margin-bottom: 15px;
  }

  .mcb-section .mcb-wrap .mcb-item-0270g8ums .button,
  .mcb-section .mcb-wrap .mcb-item-3itblyq2a .button {
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media only screen and (min-width: 960px) {
  h2 {
    font-size: 55px;
  }

  .mfn-header-menu-burger {
    display: none!important;
  }

  .mcb-section .mcb-wrap .mcb-item-o12qouxct {
    flex: 0 0 240px;
    max-width: 240px;
  }
}

@media only screen and (max-width: 480px) {
  #apps .mcb-item-button-inner {
    padding-bottom: 30px;
  }

  #apps {
    background-size: contain;
    background-position-y: 70%;
    background-origin: inherit;
  }

  h5 {
    padding-top: 15px;
  }

  .gamemode label::after {
    font-size: 12px;
  }
}

